--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
 <body>
 <div class="navbar">
     <div class="navbar-inner">
-        <span class="brand" id="server_label">Server</span>
+        <span class="brand" id="server_label">JC Server</span>
 
         <form class="navbar-form pull-left">
             <input id="es_server" type="text" class="span5" value="localhost:9200"/>
         </form>
         <button class="pull-left btn btn-link"><span id="notification" style="visibility: hidden"
                                                      class="label label-info"></span></button>
-        <button id="help_btn" class="btn pull-right-btn" data-toggle="modal" data-target="#help_popup">Help</button>
-        <button id="history_btn" class="btn pull-right-btn" data-toggle="modal" data-target="#history_popup">History
-        </button>
+        <button id="help_btn" class="btn-info pull-right-btn" data-toggle="modal" data-target="#help_popup">Help</button>
+        <button id="history_btn" class="btn-info pull-right-btn" data-toggle="modal" data-target="#history_popup">History</button>
+        <button id="localhost_btn" class="btn-warning pull-right-btn">Localhost</button>
+        <button id="matchall_btn" class="btn-success pull-right-btn">Match All Query</button>
+        <button id="matchids_btn" class="btn-success pull-right-btn">Match Ids</button>
+        <div class="btn-group">
+                        <button class="btn dropdown-toggle" data-toggle="dropdown">Metadata <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                          <li><a id="indices_btn" href="#">Indices</a></li>
+                          <li><a id="health_btn" href="#">Cluster health</a></li>
+                          <li><a id="aliases_btn" href="#">Aliases</a></li>
+                          <li><a id="mapping_btn" href="#">Mappings</a></li>
+
+                          <li class="divider"></li>
+                          <li><a id="aliasescreate_btn" href="#">Create alias</a></li>
+                        </ul>
+                      </div>
 
     </div>
 </div>
@@ -32,6 +46,8 @@
     <div id="output">{}</div>
     <div id="editor_actions">
         <div class="btn-group">
+          <a class="btn btn-small btn-link" id="formatquery" href="#" data-toggle="tooltip" title="click to format the query"><i
+                  class="icon-music"></i></a>
             <a class="btn btn-small btn-link" id="send" href="#" data-toggle="tooltip" title="click to send request"><i
                     class="icon-play"></i></a>
             <a class="btn btn-small btn-link" id="request_wrench" data-toggle="dropdown" href="#"><i
