Adding button to generate a reindex query.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
               <li class="divider"></li>
               <li><a id="aliasescreate_btn" href="#">Create alias</a></li>
+              <li><a id="reindex_btn" href="#">Reindex</a></li>
             </ul>
         </div>
 
