Adding stats aggregation function to queries

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
               <li><a id="exists_btn" href="#">Exists Query</a></li>
               <li class="divider"></li>
               <li><a id="simpleagg_btn" href="#">Simple Aggregation</a></li>
+              <li><a id="statsagg_btn" href="#">Stats Aggregation</a></li>
+
             </ul>
         </div>
 
