Adding match and match all button to the sense interface

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
           <button class="btn dropdown-toggle" data-toggle="dropdown">ES Queries <span class="caret"></span></button>
             <ul class="dropdown-menu">
               <li><a id="matchall_btn" href="#">Match All</a></li>
+              <li><a id="match_btn" href="#">Match</a></li>
+              <li><a id="matchphrase_btn" href="#">Match Phrase</a></li>
               <li><a id="filter_btn" href="#">Filter Query</a></li>
               <li><a id="exists_btn" href="#">Exists Query</a></li>
               <li class="divider"></li>
