Adding date histogram aggregation button to the sense interface

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <li class="divider"></li>
               <li><a id="simpleagg_btn" href="#">Simple Aggregation</a></li>
               <li><a id="statsagg_btn" href="#">Stats Aggregation</a></li>
+              <li><a id="datehistoagg_btn" href="#">Date Histogram Aggregation</a></li>
               <li><a id="significantterms_btn" href="#">Significant Terms Aggregation</a></li>
 
             </ul>
