Adding settings button to metadata

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <li><a id="health_btn" href="#">Cluster health</a></li>
               <li><a id="aliases_btn" href="#">Aliases</a></li>
               <li><a id="mapping_btn" href="#">Mappings</a></li>
+              <li><a id="settings_btn" href="#">Settings</a></li>
 
               <li class="divider"></li>
               <li><a id="aliasescreate_btn" href="#">Create alias</a></li>
